Clean up component tests to follow standard practices